--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import './layout/main/our-work';
 @import './layout/portfolio/portfolio-text';
 @import './layout/main/link-text';
+@import './componets/main/mobile-menu';
