--- a/css/main.css
+++ b/css/main.css
@@ -53,11 +53,26 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .visual-hidden {
@@ -88,36 +103,35 @@ body {
 }
 
 .main-header {
-  border-style: solid;
-  border-width: 1px;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  margin-bottom: 0;
-  border-color: var(--portfolio-header-color);
+  position: relative;
 }
 
-.number {
-  color: var(--feedback-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
+.nav-list {
+  display: none;
+}
+
+.header-feedback {
+  display: none;
+}
+
+.header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-.nav-feedback__contacts-info {
-  color: var(--feedback-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: flex;
-  align-items: center;
+.mobile-menu-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
 }
 
-.studio {
-  color: var(--accent-color);
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
+.mobile-menu-btn__icon {
+  fill: var(--primary-text-color);
+}
+.mobile-menu-btn__iconhover, .mobile-menu-btn__iconfocus {
+  fill: var(--accent-color);
 }
 
 .main-header__logo {
@@ -137,67 +151,6 @@ body {
 
 span {
   color: var(--accent-color);
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.nav-list {
-  display: flex;
-  align-items: center;
-  margin-top: 0;
-}
-
-.header-feedback {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-top: 0;
-}
-
-.nav-list__items:not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav-feedback__contacts:not(:last-child) {
-  margin-right: 40px;
-}
-
-.nav-feedback__contacts-info-images {
-  fill: currentColor;
-  margin-right: 8px;
-}
-
-.after-link {
-  position: relative;
-  color: var(--accent-color);
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
-}
-.after-link::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background: #2196f3;
-  border-radius: 2px;
-  display: block;
-  width: 100%;
-  height: 4px;
-}
-
-.nav-list__items-link {
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
 }
 
 .footer-logo {
@@ -1002,4 +955,29 @@ address {
 
 .feedback {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.mobile-menu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+}
+
+.mobile-menu__close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+  top: 10px;
+  position: absolute;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu__container {
+  position: relative;
 }/*# sourceMappingURL=main.css.map */
