--- a/sass/base/main/_container.scss
+++ b/sass/base/main/_container.scss
@@ -1,7 +1,20 @@
-.container{
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+.container{ 
     padding-left: 15px;
     padding-right: 15px;
+    
+@media screen and (min-width:480px) { 
+        width: 480px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;   
+    }
+
+@media screen and (min-width:768px) {
+            width: 768px;
+    }
+
+@media screen and (min-width:1200px){
+        width: 1200px;
+    }
 }
+
