--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,32 +1,62 @@
-.main-header {
-  border-style: solid;
-  border-width: 1px;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  margin-bottom: 0;
-  border-color: var(--portfolio-header-color);
+.main-header{
+  position: relative;
 }
-.number {
-  color: var(--feedback-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
+.nav-list{
+  display: none;
+}
+.header-feedback{
+  display: none;
+}
+
+.header-container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  }
+.mobile-menu-btn{
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
 }
-.nav-feedback__contacts-info {
-  color: var(--feedback-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: flex;
-  align-items: center;
+
+.mobile-menu-btn__icon{
+  fill: var(--primary-text-color);
+
+  &hover,
+  &focus{
+   fill: var(--accent-color);
+  }
 }
-.studio {
-  color: var(--accent-color);
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
-}
+// .main-header {
+//   border-style: solid;
+//   border-width: 1px;
+//   border-top: none;
+//   border-left: none;
+//   border-right: none;
+//   margin-bottom: 0;
+//   border-color: var(--portfolio-header-color);
+// }
+// .number {
+//   color: var(--feedback-color);
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   display: flex;
+//   align-items: center;
+// }
+// .nav-feedback__contacts-info {
+//   color: var(--feedback-color);
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   display: flex;
+//   align-items: center;
+// }
+// .studio {
+//   color: var(--accent-color);
+//   display: block;
+//   padding-bottom: 32px;
+//   padding-top: 32px;
+// }
 .main-header__logo {
   margin-right: 92px;
 }
@@ -43,55 +73,55 @@
 span {
   color: var(--accent-color);
 }
-.header-container {
-  display: flex;
-  align-items: center;
-}
-.navigation {
-  display: flex;
-  align-items: center;
-}
-.nav-list {
-  display: flex;
-  align-items: center;
-  margin-top: 0;
-}
-.header-feedback {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-top: 0;
-}
-.nav-list__items:not(:last-child) {
-  margin-right: 50px;
-}
-.nav-feedback__contacts:not(:last-child) {
-  margin-right: 40px;
-}
-.nav-feedback__contacts-info-images {
-  fill: currentColor;
-  margin-right: 8px;
-}
-.after-link {
-  position: relative;
-  color: var(--accent-color);
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: #2196f3;
-    border-radius: 2px;
-    display: block;
-    width: 100%;
-    height: 4px;
-  }
-}
-.nav-list__items-link {
-  display: block;
-  padding-bottom: 32px;
-  padding-top: 32px;
-}
+// .header-container {
+//   display: flex;
+//   align-items: center;
+// }
+// .navigation {
+//   display: flex;
+//   align-items: center;
+// }
+// .nav-list {
+//   display: flex;
+//   align-items: center;
+//   margin-top: 0;
+// }
+// .header-feedback {
+//   display: flex;
+//   align-items: center;
+//   margin-left: auto;
+//   margin-top: 0;
+// }
+// .nav-list__items:not(:last-child) {
+//   margin-right: 50px;
+// }
+// .nav-feedback__contacts:not(:last-child) {
+//   margin-right: 40px;
+// }
+// .nav-feedback__contacts-info-images {
+//   fill: currentColor;
+//   margin-right: 8px;
+// }
+// .after-link {
+//   position: relative;
+//   color: var(--accent-color);
+//   display: block;
+//   padding-bottom: 32px;
+//   padding-top: 32px;
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     background: #2196f3;
+//     border-radius: 2px;
+//     display: block;
+//     width: 100%;
+//     height: 4px;
+//   }
+// }
+// .nav-list__items-link {
+//   display: block;
+//   padding-bottom: 32px;
+//   padding-top: 32px;
+// }
