--- a/sass/componets/main/_mobile-menu.scss
+++ b/sass/componets/main/_mobile-menu.scss
@@ -1,3 +1,18 @@
+.mobile-menu-btn{
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  line-height: 0;
+}
+
+.mobile-menu-btn__icon{
+  fill: var(--primary-text-color);
+
+  &hover,
+  &focus{
+   fill: var(--accent-color);
+  }
+}
 .mobile-menu{
     position: absolute;
     top: 0;
@@ -5,6 +20,15 @@
     width: 100%;
     height: 100vh;
     overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    background-color: var(--text-color);
+}
+.mobile-menu.is-open{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .mobile-menu__close-btn{
   background-color: transparent;
