--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,19 @@ body {
   .mobile-menu__nav-list {
     list-style: none;
   }
+  .mobile-menu__nav-list-border:not(:last-child) {
+    border-style: solid;
+    border-width: 1px;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    margin-bottom: 0;
+    border-color: var(--primary-text-color);
+    padding-right: 10px;
+  }
+  .mobile-menu__nav-list-border:not(:first-child) {
+    padding-left: 10px;
+  }
   .mobile-menu_nav-list-link {
     text-decoration: none;
     color: var(--contact-color);
@@ -135,6 +148,7 @@ body {
   }
   .mobile-menu_nav-pos {
     display: flex;
+    margin-bottom: 0;
   }
   .mobile-menu_nav-list-link-num {
     font-size: 34px;
@@ -150,6 +164,18 @@ body {
     font-size: 18px;
     line-height: 22px;
     color: var(--accent-color);
+  }
+  .mobile-menu_nav-margin {
+    margin-bottom: 300px;
+  }
+  .mobile-menu__nav-list-links:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__nav-list-margin:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu_nav-link-margin {
+    margin-bottom: 64px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1111,4 +1137,8 @@ address {
 
 .mobile-menu__container {
   position: relative;
+}
+
+.mobile-menu_nav {
+  padding-left: 0;
 }/*# sourceMappingURL=main.css.map */
