--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -1,21 +1,38 @@
 .main-section__text {
   justify-content: center;
 }
-.main-section-color {
-  width: 1600px;
-  height: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/background/Img.png");
-  background-size: cover;
-  background-color: var(--background-color);
-  padding-top: 200px;
-  padding-bottom: 200px;
+@media screen and (max-width:768px){ 
+  .main-section-color {
+    display: block;
+    max-width: 100%;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/background/Img.png");
+    background-size: cover;
+    background-color: var(--background-color);
+    
+  }
 }
+// .main-section-color {
+//   width: 1600px;
+//   height: 600px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   background-image: linear-gradient(
+//       rgba(47, 48, 58, 0.4),
+//       rgba(47, 48, 58, 0.4)
+//     ),
+//     url("../images/background/Img.png");
+//   background-size: cover;
+//   background-color: var(--background-color);
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+// }
 .main-section__text-type {
   text-align: center;
   max-width: 696px;
