--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -1,13 +1,11 @@
-.main-section__text {
-  justify-content: center;
+
+@media screen and (max-width:767px){ 
+  
 }
-@media screen and (max-width:768px){ 
+@media screen and (min-width:480px){
   .main-section-color {
-    display: block;
-    max-width: 100%;
+    width: 100%;
     height: 400px;
-    margin-left: auto;
-    margin-right: auto;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -15,8 +13,35 @@
       url("../images/background/Img.png");
     background-size: cover;
     background-color: var(--background-color);
-    
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
+  .main-section__text-type {
+    text-align: center;
+    max-width: 360px;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--text-color);
+    margin-bottom: 30px;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .main-section__text {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+
+@media screen and (min-width: 768px) {
+  
 }
 // .main-section-color {
 //   width: 1600px;
@@ -33,22 +58,22 @@
 //   padding-top: 200px;
 //   padding-bottom: 200px;
 // }
-.main-section__text-type {
-  text-align: center;
-  max-width: 696px;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: var(--text-color);
-  margin-bottom: 30px;
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .main-section__text-type {
+//   text-align: center;
+//   max-width: 696px;
+//   font-style: normal;
+//   font-weight: 900;
+//   font-size: 44px;
+//   line-height: 1.36;
+//   text-align: center;
+//   letter-spacing: 0.06em;
+//   text-transform: uppercase;
+//   color: var(--text-color);
+//   margin-bottom: 30px;
+//   margin-top: 0;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
 .invisible {
   position: absolute;
   white-space: nowrap;
