--- a/sass/componets/main/_mobile-menu.scss
+++ b/sass/componets/main/_mobile-menu.scss
@@ -35,7 +35,6 @@
   border: none;
   padding: 0;
   line-height: 0;
-  top: 10px;
   position: absolute;
   right: 15px;
   width: 40px;
@@ -43,6 +42,7 @@
 }
 .mobile-menu__container{
     position: relative;
+    margin-top: 0;
 }
 .mobile-menu_nav{
   padding-left: 0;
