--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -1,7 +1,7 @@
 
-@media screen and (max-width:767px){ 
-  
-}
+@media screen and (max-width:767px){}
+
+
 @media screen and (min-width:480px){
   .main-section-color {
     width: 100%;
@@ -43,37 +43,20 @@
 @media screen and (min-width: 768px) {
   
 }
-// .main-section-color {
-//   width: 1600px;
-//   height: 600px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   background-image: linear-gradient(
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url("../images/background/Img.png");
-//   background-size: cover;
-//   background-color: var(--background-color);
-//   padding-top: 200px;
-//   padding-bottom: 200px;
-// }
-// .main-section__text-type {
-//   text-align: center;
-//   max-width: 696px;
-//   font-style: normal;
-//   font-weight: 900;
-//   font-size: 44px;
-//   line-height: 1.36;
-//   text-align: center;
-//   letter-spacing: 0.06em;
-//   text-transform: uppercase;
-//   color: var(--text-color);
-//   margin-bottom: 30px;
-//   margin-top: 0;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
+@media screen and (min-width: 1200px){
+  .main-section-color {
+    height: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+  .main-section__text-type {
+    max-width: 696px; 
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 .invisible {
   position: absolute;
   white-space: nowrap;
