--- a/sass/layout/main/_our-work.scss
+++ b/sass/layout/main/_our-work.scss
@@ -1,32 +1,44 @@
-.work-images__example {
-  position: relative;
-  display: block;
-  justify-content: center;
-  align-items: center;
+
+@media screen and (max-width:1199px) {
+  .our-work{
+    display: none;
+  }
+  
 }
-.our-job {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  width: 370px;
-  height: 70px;
-  background: rgba(47, 48, 58, 0.8);
+@media screen and (min-width:1200px){
+  .work-images__example {
+    position: relative;
+    display: block;
+    justify-content: center;
+    align-items: center;
+  }
+  .our-job {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    width: 370px;
+    height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+  }
+  .work-images__example:not(:last-child) {
+    margin-right: 30px;
+  }
+  .our-advantages {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
+  .our-work {
+    padding-bottom: 94px;
+  }
+  .work-images__example-pictures {
+    display: block;
+  }
+  .employees__card-pictures {
+    display: block;
+  }
 }
-.work-images__example:not(:last-child) {
-  margin-right: 30px;
-}
-.our-advantages {
-  padding-bottom: 94px;
-  padding-top: 94px;
-}
-.our-work {
-  padding-bottom: 94px;
-}
-.work-images__example-pictures {
-  display: block;
-}
-.employees__card-pictures {
-  display: block;
-}
+
+
+
