--- a/css/main.css
+++ b/css/main.css
@@ -917,6 +917,102 @@ address {
     max-width: 270px;
   }
 }
+@media screen and (max-width: 767px) {
+  .company-style__magrin-link {
+    display: flex;
+    width: 210px;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+    fill: var(--social-color);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--social-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .company-style__magrin-link:hover, .company-style__magrin-link:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+  }
+  .company-style {
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .company-style__magrin:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+  .company-style__magrin:nth-last-child(-n+2) {
+    margin-bottom: 0;
+  }
+  .company-style__magrin {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .company-style__magrin-link {
+    display: flex;
+    width: 226px;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+    fill: var(--social-color);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--social-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .company-style__magrin-link:hover, .company-style__magrin-link:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+  }
+  .company-style {
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .company-style__magrin:nth-child(3n+3) {
+    margin-right: 0;
+  }
+  .company-style__magrin {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .company-style__magrin:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .company-style {
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+  }
+  .company-style__magrin:not(:last-child) {
+    margin-right: 30px;
+  }
+  .company-style__magrin-link {
+    display: flex;
+    width: 170px;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+    fill: var(--social-color);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--social-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .company-style__magrin-link:hover, .company-style__magrin-link:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+  }
+}
 .company {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -927,34 +1023,6 @@ address {
 .company-style__magrin-link-images {
   width: 106px;
   height: 60px;
-}
-
-.company-style {
-  margin-top: 0;
-  display: flex;
-  justify-content: center;
-}
-
-.company-style__magrin:not(:last-child) {
-  margin-right: 30px;
-}
-
-.company-style__magrin-link {
-  display: flex;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  fill: var(--social-color);
-  border-radius: 4px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: var(--social-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.company-style__magrin-link:hover, .company-style__magrin-link:focus {
-  fill: var(--accent-color);
-  border-color: var(--accent-color);
 }
 
 .border-color {
