--- a/sass/layout/main/_footer.scss
+++ b/sass/layout/main/_footer.scss
@@ -1,24 +1,150 @@
-.footer-logo {
-  color: var(--text-color);
-  margin-bottom: 28px;
+
+@media screen and (min-width:480px){
+  .footer-position {
+    display: block;
+    text-align: center;
+  }
+  .footer-address-position {
+    width: 230px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .feedback-footer-text {
+    color: var(--text-color);
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
+  .footer-team {
+    color: var(--text-color);
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+  }
+  .workers-social-footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+  }
+  .contact-mail-footer {
+    width: 450px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding-left: 16px;
+    margin-right: 12px;
+    margin-top: 0;
+    background: transparent;
+    color: var(--text-color);
+    margin-bottom: 20px;
+  }
+  .footer-btn {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 50px;
+    background: #2196f3;
+    border-radius: 4px;
+    border: 0;
+    padding: 0;
+    color: var(--text-color);
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+  
+    &:hover,
+    &:focus {
+      background: var(--background-button-color);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+  }
+  .footer-logo {
+    color: var(--text-color);
+  }
+  address {
+    margin-top: 28px;
+    margin-bottom: 60px;
+  }
+  .footer-margin {
+    margin-bottom: 105px;
+  }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px){
+  .footer-address-position {
+    margin-left: 0;
+  }
+  .footer-position {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-right: 89px;
+    padding-left: 76px;
+  }
+}
+@media screen and (min-width:1200px){
+  .footer-position {
+    display: flex;
+    align-items: baseline;
+  }
+  .footer-address-position {
+    margin-right: 70px;
+    margin-left: 0;
+    text-align: left;
+  }
+  .footer-margin {
+    margin-bottom: 0;
+    margin-right: 94px;
+  }
+  .footer-team{
+    text-align: left;
+  }
+  .feedback-footer-text {
+    text-align: left;
+  }
+  .form-flex{
+    display: flex;
+  }
+  .contact-mail-footer{
+    width: 358px;
+  }
+  address {
+    margin-bottom: 0;
+  }
+  
+}
+
+
+
+
+
+
 footer {
   background-color: var(--background-color);
   padding-top: 60px;
   padding-bottom: 60px;
 }
-.footer-team {
-  color: var(--text-color);
-  text-align: left;
-  margin-bottom: 20px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
+
 .workers-link-footer {
   display: flex;
   align-items: center;
@@ -34,34 +160,8 @@ footer {
     background-color: var(--accent-color);
   }
 }
-.footer-btn {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.06em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  height: 50px;
-  background: #2196f3;
-  border-radius: 4px;
-  border: 0;
-  padding: 0;
-  color: var(--text-color);
-  cursor: pointer;
 
-  &:hover,
-  &:focus {
-    background: var(--background-button-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  }
-}
-.footer-margin {
-  margin-right: 94px;
-}
+
 .picture-button {
   width: 24px;
   height: 24px;
@@ -71,43 +171,14 @@ footer {
 .contact-footer-message {
   display: flex;
 }
-.form-flex {
-  display: flex;
-}
-.contact-mail-footer {
-  width: 358px;
-  height: 50px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  padding-left: 16px;
-  margin-right: 12px;
-  margin-top: 0;
-  background: transparent;
-  color: var(--text-color);
-}
+
+
 .footer-address:not(:last-child) {
   margin-bottom: 12px;
 }
 .footer-finish {
   margin-top: 0;
   margin-bottom: 0px;
-}
-address {
-  margin-top: 30px;
-}
-.footer-address-position {
-  width: 230px;
-  margin-right: 70px;
-}
-.footer-position {
-  display: flex;
-  align-items: baseline;
-}
-.workers-social-footer {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 0;
 }
 .workers-footer {
   width: 20px;
