--- a/css/main.css
+++ b/css/main.css
@@ -482,17 +482,24 @@ footer {
   background-color: var(--accent-color);
 }
 
-.portfolio-indent {
-  margin-top: 0;
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
+@media screen and (min-width: 480px) {
+  .portfolio-indent {
+    margin-top: 0;
+    margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+  .portfolio-indent-buttons:not(:last-child) {
+    margin-right: 8px;
+  }
+  .portfolio-indent-buttons:nth-child(3) {
+    margin-right: 20px;
+  }
+  .portfolio-indent-buttons:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
 }
-
-.portfolio-indent-buttons:not(:last-child) {
-  margin-right: 8px;
-}
-
 .button {
   padding: 6px 22px;
   margin-top: 5px;
@@ -1242,6 +1249,7 @@ footer {
   visibility: hidden;
   pointer-events: none;
   background-color: var(--text-color);
+  z-index: 4;
 }
 
 .mobile-menu.is-open {
