--- a/sass/componets/potrfolio/_buttons.scss
+++ b/sass/componets/potrfolio/_buttons.scss
@@ -1,12 +1,32 @@
-.portfolio-indent {
-  margin-top: 0;
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
+@media screen and (min-width:480px){
+  .portfolio-indent {
+    margin-top: 0;
+    margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+  .portfolio-indent-buttons:not(:last-child) {
+    margin-right: 8px;
+  }
+  .portfolio-indent-buttons:nth-child(3){
+margin-right: 20px;
+  }
+  .portfolio-indent-buttons:nth-child(-n+3){
+    margin-bottom: 15px;
+  }
 }
-.portfolio-indent-buttons:not(:last-child) {
-  margin-right: 8px;
-}
+
+
+// .portfolio-indent {
+//   margin-top: 0;
+//   margin-bottom: 50px;
+//   display: flex;
+//   justify-content: center;
+// }
+// .portfolio-indent-buttons:not(:last-child) {
+//   margin-right: 8px;
+// }
 .button {
   padding: 6px 22px;
   margin-top: 5px;
