--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -1,3 +1,11 @@
+@media screen and (min-width:480px){
+  .employees__card-size{
+    width: 450px;
+    object-fit: cover;
+  }
+}
+
+
 .border-color {
   border-width: 1px;
   border-style: solid;
