--- a/sass/componets/potrfolio/_buttons.scss
+++ b/sass/componets/potrfolio/_buttons.scss
@@ -16,7 +16,11 @@ margin-right: 20px;
     margin-bottom: 15px;
   }
 }
-
+@media screen and (min-width:480px){
+  .portfolio-indent{
+    justify-content: center;
+  }
+}
 
 // .portfolio-indent {
 //   margin-top: 0;
