--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -3,21 +3,75 @@
     width: 450px;
     object-fit: cover;
   }
+  .text-portfolio {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 450px;
+    // width: 370px;
+    height: 294px;
+    background: rgba(33, 150, 243, 0.9);
+    position: absolute;
+    bottom: 0;
+    top: 75%;
+    z-index: 1;
+    transition: top 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .employees__card-portfolio-link:hover &,
+    .employees__card-portfolio-link:focus & {
+      top: 0;
+    }
+  }
+  .border-color {
+    border-width: 1px;
+    border-style: solid;
+    border-color: var(--background-buttons-color);
+    border-top: none;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: var(--text-color);
+    position: relative;
+    z-index: 2;
+  }
+  .employees__card-portfolio {
+    margin-top: 30px;
+    margin-left: 30px;
+  }
+  .employees__card-portfolio-link {
+    display: block;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    position: relative;
+    overflow: hidden;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
 }
-
-
-.border-color {
-  border-width: 1px;
-  border-style: solid;
-  border-color: var(--background-buttons-color);
-  border-top: none;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: var(--text-color);
-  position: relative;
-  z-index: 2;
+@media screen and (min-width:768px){
+  .employees__card-size{
+    width: 354px;
+  }
+  .text-portfolio {
+    width: 354px;
+  }
+  .employees {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+  
+}
+@media screen and (min-width:768px) and (max-width:1199px){
+  .border-color{
+    width: 354px;
+    height: 140px;
+  }
 }
 .portfolio-headers {
   font-style: normal;
@@ -38,24 +92,9 @@
   margin-bottom: 0;
   margin-top: 0;
 }
-.employees__card-portfolio {
-  margin-top: 30px;
-  margin-left: 30px;
-}
+
 .portfolio-background {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.employees__card-portfolio-link {
-  display: block;
-  text-decoration: none;
-  color: var(--primary-text-color);
-  position: relative;
-  overflow: hidden;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus,
-  &:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-}
+
