--- a/sass/base/main/_saptitel.scss
+++ b/sass/base/main/_saptitel.scss
@@ -76,6 +76,7 @@
     .main-sabtitle{
         justify-content: center;
         margin-top: 0;
+        flex-wrap: nowrap;
     }
     .background-color {
         width: auto;   
