--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -124,6 +124,9 @@
   .employees{
     flex-wrap: nowrap;
   }
+  .employees-portfolio{
+    flex-wrap: wrap;
+  }
   .employees__card{
     margin-bottom: 0;
   }
