--- a/css/main.css
+++ b/css/main.css
@@ -816,7 +816,7 @@ footer {
   .main-section-color {
     width: 100%;
     height: 400px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/background/Img.png");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -847,6 +847,7 @@ footer {
 }
 @media screen and (min-width: 1200px) {
   .main-section-color {
+    width: 100%;
     height: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -874,6 +875,11 @@ footer {
   margin: -1px;
 }
 
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .main-section-color {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200@x2.jpg");
+  }
+}
 @media screen and (min-width: 480px) {
   .main-sabtitle {
     display: flex;
@@ -1187,6 +1193,9 @@ footer {
 @media screen and (min-width: 1200px) {
   .employees {
     flex-wrap: nowrap;
+  }
+  .employees-portfolio {
+    flex-wrap: wrap;
   }
   .employees__card {
     margin-bottom: 0;
