--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -7,7 +7,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/Img.png");
+      url("/images/background/background-1200.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -39,10 +39,11 @@
 
 
 @media screen and (min-width: 768px) {
-  
+
 }
 @media screen and (min-width: 1200px){
   .main-section-color {
+    width: 100%;
     height: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -68,4 +69,15 @@
   clip-path: inset(50%);
   margin: -1px;
 }
-
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx){
+    .main-section-color {
+      background-image:linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+        ), 
+      url("/images/background/background-1200@x2.jpg");
+    }
+  }
+  
