--- a/sass/layout/main/_our-work.scss
+++ b/sass/layout/main/_our-work.scss
@@ -29,6 +29,10 @@
   }
 }
 @media screen and (min-width:1200px){
+  .employees__card-pictures {
+    width: 270px;
+    height: 260px;
+  }
   .work-images__example {
     position: relative;
     display: block;
