--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ body {
     width: 480px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -816,7 +815,7 @@ footer {
   .main-section-color {
     width: 100%;
     height: 400px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/background/background-1200.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-480.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -845,9 +844,15 @@ footer {
     margin-right: auto;
   }
 }
+@media screen and (min-width: 768px) {
+  .main-section-color {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-768.jpg");
+  }
+}
 @media screen and (min-width: 1200px) {
   .main-section-color {
-    width: 100%;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200.jpg");
+    width: 1600px;
     height: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -877,7 +882,7 @@ footer {
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .main-section-color {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/background/background-1200@x2.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200@x2.jpg");
   }
 }
 @media screen and (min-width: 480px) {
@@ -943,6 +948,7 @@ footer {
   }
   .saptitel {
     max-width: 354px;
+    text-align: left;
   }
   .sabtitel {
     max-width: 354px;
@@ -967,6 +973,12 @@ footer {
   }
   .sabtitel {
     max-width: 270px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .main-sabtitle__employees {
+    margin-bottom: 0;
+    margin-top: 0;
   }
 }
 @media screen and (max-width: 767px) {
@@ -1184,7 +1196,13 @@ footer {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .border-color {
     width: 354px;
-    height: 140px;
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio-content {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 104px;
   }
   .portfolio-background {
     padding-top: 94px;
@@ -1210,23 +1228,9 @@ footer {
     width: 370px;
   }
 }
-@media screen and (max-width: 767px) {
-  .employees__card-pictures {
-    width: 450px;
-    height: 460px;
-  }
-}
 @media screen and (max-width: 1199px) {
   .our-work {
     display: none;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .employees__card-pictures {
-    -o-object-fit: cover;
-       object-fit: cover;
-    width: 354px;
-    height: 374px;
   }
 }
 @media screen and (min-width: 480px) {
@@ -1236,6 +1240,14 @@ footer {
   .workers-social {
     display: flex;
     justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .employees__card-pictures {
+    -o-object-fit: cover;
+       object-fit: cover;
+    width: 354px;
+    height: 374px;
   }
 }
 @media screen and (min-width: 1200px) {
