--- a/sass/base/main/_saptitel.scss
+++ b/sass/base/main/_saptitel.scss
@@ -62,6 +62,7 @@
     }
     .saptitel{ 
         max-width: 354px;
+        text-align:left;
         }
     .sabtitel{   
         max-width: 354px; 
@@ -87,5 +88,11 @@
         }
     .sabtitel{   
         max-width: 270px;
+    }
+}
+@media screen and (min-width:768px){
+    .main-sabtitle__employees{
+        margin-bottom: 0;
+        margin-top: 0;
     }
 }
