--- a/sass/base/main/_saptitel.scss
+++ b/sass/base/main/_saptitel.scss
@@ -1,18 +1,22 @@
-@media screen and (min-width:480px){
-    .main-sabtitle{
-        display: flex;
-        margin-top: 0;
-        flex-wrap: wrap;
-    }
+@media screen and (min-width:320px){
     .background-color {
         display: flex;
         background-color: var(--background-buttons-color);
-        width: 450px;
-        height: 120px;
+        width: 100%;
+        height: auto;
         border-radius: 4px;
         align-items: center;
         justify-content: center;
         margin-bottom: 30px;
+    }
+    .main-sabtitle__employees-images{
+        display: flex;
+        padding-left: 0;
+        margin-top: 0;
+        width: 25%;
+        height: auto;
+        padding-top: 5%;
+        padding-bottom: 5%;
     }
     .saptitel{ 
         font-style: normal;
@@ -41,10 +45,26 @@
     .main-sabtitle__employees{
         margin-bottom: 30px;
     }
-    .main-sabtitle__employees-images{
+}
+
+
+@media screen and (min-width:480px){
+    .main-sabtitle{
         display: flex;
-        padding-left: 0;
         margin-top: 0;
+        flex-wrap: wrap;
+    }
+    .background-color {
+        width: 450px;
+        height: 120px; 
+    }
+    
+    
+    .main-sabtitle__employees-images{
+        width: 70px;
+        height: 70px;
+        padding-top: 0;
+        padding-bottom: 0;
     }
     .main-sabtitle__employees:not(:last-child) {
         margin-right: 30px;
