--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,10 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  .after-link {
+    color: var(--accent-color);
+    text-decoration: none;
+  }
   .main-header {
     position: relative;
   }
@@ -148,6 +152,7 @@ body {
   .mobile-menu_nav-pos {
     display: flex;
     margin-bottom: 0;
+    flex-wrap: wrap;
   }
   .mobile-menu_nav-list-link-num {
     font-size: 34px;
@@ -285,7 +290,7 @@ span {
   color: var(--accent-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .footer-position {
     display: block;
     text-align: center;
@@ -325,7 +330,7 @@ span {
     margin-top: 0;
   }
   .contact-mail-footer {
-    width: 450px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -384,6 +389,9 @@ span {
     justify-content: center;
     padding-right: 89px;
     padding-left: 76px;
+  }
+  .contact-mail-footer {
+    width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -615,7 +623,7 @@ footer {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .modal-window {
     position: absolute;
     top: 50%;
@@ -997,7 +1005,38 @@ footer {
     margin-top: 0;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .company-style {
+    margin-top: 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .company-style__magrin {
+    margin-bottom: 30px;
+  }
+  .company-style__magrin-link {
+    display: flex;
+    width: 100%;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+    fill: var(--social-color);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--social-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .company-style__magrin-link:hover, .company-style__magrin-link:focus {
+    fill: var(--accent-color);
+    border-color: var(--accent-color);
+  }
+  .company-style__magrin-link-images {
+    width: auto;
+    height: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .company-style__magrin-link {
     display: flex;
     width: 210px;
@@ -1029,6 +1068,10 @@ footer {
   }
   .company-style__magrin {
     margin-bottom: 30px;
+  }
+  .company-style__magrin-link-images {
+    width: 106px;
+    height: 60px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -1065,6 +1108,10 @@ footer {
   .company-style__magrin:nth-last-child(-n+3) {
     margin-bottom: 0;
   }
+  .company-style__magrin-link-images {
+    width: 106px;
+    height: 60px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .company-style {
@@ -1092,17 +1139,16 @@ footer {
     fill: var(--accent-color);
     border-color: var(--accent-color);
   }
+  .company-style__magrin-link-images {
+    width: 106px;
+    height: 60px;
+  }
 }
 .company {
   padding-top: 94px;
   padding-bottom: 94px;
   padding-left: 0;
   padding-right: 0;
-}
-
-.company-style__magrin-link-images {
-  width: 106px;
-  height: 60px;
 }
 
 @media screen and (min-width: 320px) {
@@ -1325,7 +1371,7 @@ footer {
 }
 
 .mobile-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
