--- a/sass/layout/main/_companies.scss
+++ b/sass/layout/main/_companies.scss
@@ -1,5 +1,37 @@
-
-@media screen and (max-width:767px){
+@media screen and (min-width: 320px) and (max-width: 479px){
+  .company-style {
+    margin-top: 0;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .company-style__magrin {
+    margin-bottom: 30px;
+  }
+  .company-style__magrin-link {
+    display: flex;
+    width: 100%;
+    height: 92px;
+    justify-content: center;
+    align-items: center;
+    fill: var(--social-color);
+    border-radius: 4px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--social-color);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+      border-color: var(--accent-color);
+    } 
+}
+.company-style__magrin-link-images {
+  width: auto;
+  height: 100%;
+}
+}
+@media screen and (min-width: 480px) and (max-width: 767px){
   .company-style__magrin-link {
     display: flex;
     width: 210px;
@@ -33,6 +65,10 @@
 }
 .company-style__magrin {
   margin-bottom: 30px;
+}
+.company-style__magrin-link-images {
+  width: 106px;
+  height: 60px;
 }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px){
@@ -71,6 +107,10 @@
 .company-style__magrin:nth-last-child(-n + 3){
 margin-bottom: 0;
 }
+.company-style__magrin-link-images {
+  width: 106px;
+  height: 60px;
+}
 }
 @media screen and (min-width:1200px){
   .company-style {
@@ -100,6 +140,10 @@ margin-bottom: 0;
       border-color: var(--accent-color);
     }
   }
+  .company-style__magrin-link-images {
+    width: 106px;
+    height: 60px;
+  }
 }
 
 .company {
@@ -108,8 +152,5 @@ margin-bottom: 0;
   padding-left: 0;
   padding-right: 0;
 }
-.company-style__magrin-link-images {
-  width: 106px;
-  height: 60px;
-}
+
 
