--- a/sass/layout/main/_footer.scss
+++ b/sass/layout/main/_footer.scss
@@ -1,5 +1,4 @@
-
-@media screen and (min-width:480px){
+@media screen and (min-width:320px){
   .footer-position {
     display: block;
     text-align: center;
@@ -39,7 +38,7 @@
     margin-top: 0;
   }
   .contact-mail-footer {
-    width: 450px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -89,6 +88,9 @@
     margin-bottom: 105px;
   }
 }
+// @media screen and (min-width:480px){
+  
+// }
 @media screen and (min-width: 768px) and (max-width: 1199px){
   .footer-address-position {
     margin-left: 0;
@@ -100,6 +102,9 @@
     justify-content: center;
     padding-right: 89px;
     padding-left: 76px;
+  }
+  .contact-mail-footer{
+    width: 450px;
   }
 }
 @media screen and (min-width:1200px){
