--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -1,8 +1,7 @@
-
-@media screen and (min-width:480px){
+@media screen and (min-width:320px){
   .main-section-color {
     width: 100%;
-    height: 400px;
+    height: auto;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -29,6 +28,24 @@
     margin-top: 0;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+
+@media screen and (min-width:480px){
+  .main-section-color {
+    width: 100%;
+    height: 400px;
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("/images/background/background-480.jpg");
+    background-size: cover;
+    background-color: var(--background-color);
+    padding-top: 118px;
+    padding-bottom: 118px;
+    margin-bottom: 60px;
   }
   .main-section__text {
     margin-top: 0;
