--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:320px){
+@media screen and (min-width: 320px) {
   .main-section-color {
     width: 100%;
     height: auto;
@@ -30,9 +30,7 @@
     margin-right: auto;
   }
 }
-
-
-@media screen and (min-width:480px){
+@media screen and (min-width: 480px) {
   .main-section-color {
     width: 100%;
     height: 400px;
@@ -54,9 +52,8 @@
   }
 }
 
-
 @media screen and (min-width: 768px) {
-  .main-section-color{
+  .main-section-color {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -64,14 +61,14 @@
       url("/images/background/background-768.jpg");
   }
 }
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1200px) {
   .main-section-color {
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url("/images/background/background-1200.jpg");
-      width: 1600px;
+    width: 1600px;
     height: 600px;
     margin-left: auto;
     margin-right: auto;
@@ -80,7 +77,7 @@
     margin-bottom: 0;
   }
   .main-section__text-type {
-    max-width: 696px; 
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
@@ -98,14 +95,33 @@
   margin: -1px;
 }
 @media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (-o-min-device-pixel-ratio: 2/1),
   (min-resolution: 192dpi),
-  (min-resolution: 2dppx){
-    .main-section-color {
-      background-image:linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-        ), 
-      url("/images/background/background-1200@x2.jpg");
+  (min-resolution: 2dppx) {
+  .main-section-color {
+    @media screen and (max-width: 767px) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("/images/background/background-480@x2.jpg");
+    }
+
+    @media screen and (min-width: 768px) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("/images/background/background-768@x2.jpg");
+    }
+
+    @media screen and (min-width: 1200px) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("/images/background/background-1200@x2.jpg");
     }
   }
-  
+}
