--- a/sass/componets/main/_mobile-menu.scss
+++ b/sass/componets/main/_mobile-menu.scss
@@ -2,17 +2,21 @@
   background-color: transparent;
   border: none;
   padding: 0;
-  line-height: 0;
+  line-height: 0;  
 }
 
-.mobile-menu-btn__icon{
+.mobile-menu-btn__icon {
   fill: var(--primary-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &hover,
-  &focus{
-   fill: var(--accent-color);
+  .mobile-menu-btn:focus  & {
+    fill: var(--accent-color);
+  }
+  .mobile-menu-btn:hover  & {
+    fill: var(--accent-color);
   }
 }
+
 .mobile-menu{
     position: fixed;
     top: 0;
@@ -40,6 +44,15 @@
   right: 15px;
   width: 40px;
   height: 40px;
+}
+.mobile-menu__close-icon{
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .mobile-menu__close-btn:focus  & {
+    fill: var(--accent-color);
+  }
+  .mobile-menu__close-btn:hover  & {
+    fill: var(--accent-color);
+  }
 }
 .mobile-menu__container{
     position: relative;
