--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -6,7 +6,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/background-480.jpg");
+      url("/images/background/background-480.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
